Added meta description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="./assets/images/favicon-32x32.png"
     />
 
+    <meta
+      name="description"
+      content="Solution to Frontend Mentor's Results summary component design challenge."
+    />
     <title>Frontend Mentor | Results summary component</title>
   </head>
   <body>
